--- a/doc/agile/v1/sprint_backlog_06.org
+++ b/doc/agile/v1/sprint_backlog_06.org
@@ -13,15 +13,15 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-05 Sun 17:27]
+#+CAPTION: Clock summary at [2017-11-05 Sun 17:36]
 | <75>                                                                        |         |       |       |       |
 | Headline                                                                    | Time    |       |       |     % |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| *Total time*                                                                | *58:30* |       |       | 100.0 |
+| *Total time*                                                                | *58:39* |       |       | 100.0 |
 |-----------------------------------------------------------------------------+---------+-------+-------+-------|
-| Stories                                                                     | 58:30   |       |       | 100.0 |
-| Active                                                                      |         | 58:30 |       | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   4.0 |
+| Stories                                                                     | 58:39   |       |       | 100.0 |
+| Active                                                                      |         | 58:39 |       | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |         |       |  2:19 |   3.9 |
 | STARTED Sprint and product backlog grooming                                 |         |       |  2:08 |   3.6 |
 | CANCELLED Add an "at" field to transform stats                              |         |       |  0:10 |   0.3 |
 | COMPLETED Move enablement into yarn                                         |         |       |  1:01 |   1.7 |
@@ -34,16 +34,16 @@
 | COMPLETED Clean up formatter names                                          |         |       |  1:00 |   1.7 |
 | COMPLETED Caching in travis                                                 |         |       |  0:59 |   1.7 |
 | COMPLETED Consider collapsing element properties into element               |         |       |  1:08 |   1.9 |
-| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  23.9 |
+| COMPLETED Create the archetype location properties                          |         |       | 13:58 |  23.8 |
 | COMPLETED Analysis work on moving to c++ 17                                 |         |       |  0:32 |   0.9 |
 | COMPLETED Upgrade rtags to latest                                           |         |       |  0:36 |   1.0 |
-| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   5.2 |
+| COMPLETED Experiment with adding colour to dia diagrams                     |         |       |  3:01 |   5.1 |
 | COMPLETED Move artefact into yarn                                           |         |       |  2:21 |   4.0 |
 | COMPLETED Supply the yarn options to prober                                 |         |       |  0:23 |   0.7 |
 | COMPLETED Experiment with a database model                                  |         |       |  1:20 |   2.3 |
 | STARTED Split registrar into two classes                                    |         |       |  1:25 |   2.4 |
-| STARTED Generate file paths as a transform                                  |         |       |  9:21 |  16.0 |
-| STARTED Implement exomodel in terms of exoelements                          |         |       |  7:17 |  12.5 |
+| STARTED Generate file paths as a transform                                  |         |       |  9:21 |  15.9 |
+| STARTED Implement exomodel in terms of exoelements                          |         |       |  7:26 |  12.7 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -922,6 +922,7 @@ We should check that =enable_unique_file_names= is set to true.
 Key: =quilt.cpp.flat_directory_mode.enabled=.
 
 *** STARTED Implement exomodel in terms of exoelements                :story:
+    CLOCK: [2017-11-05 Sun 17:27]--[2017-11-05 Sun 17:36] =>  0:09
     CLOCK: [2017-11-05 Sun 16:24]--[2017-11-05 Sun 17:26] =>  1:02
     CLOCK: [2017-11-05 Sun 15:12]--[2017-11-05 Sun 16:20] =>  1:08
     CLOCK: [2017-11-04 Sat 16:39]--[2017-11-04 Sat 16:59] =>  0:20
