--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,20 +13,21 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-06 Mon 21:42]
+#+CAPTION: Clock summary at [2017-11-06 Mon 22:00]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *0:45* |      |      | 100.0 |
+| *Total time*                                                                | *1:03* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 0:45   |      |      | 100.0 |
-| Active                                                                      |        | 0:45 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 0:45 | 100.0 |
+| Stories                                                                     | 1:03   |      |      | 100.0 |
+| Active                                                                      |        | 1:03 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 1:03 | 100.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
 *** COMPLETED Edit release notes for previous sprint                  :story:
     CLOSED: [2017-11-06 Mon 21:40]
+    CLOCK: [2017-11-06 Mon 21:41]--[2017-11-06 Mon 21:59] =>  0:18
     CLOCK: [2017-11-06 Mon 21:03]--[2017-11-06 Mon 21:40] =>  0:37
     CLOCK: [2017-11-06 Mon 20:55]--[2017-11-06 Mon 21:03] =>  0:08
 
@@ -79,8 +80,8 @@ You can download binaries from [Bintray](https://bintray.com/domaindrivenconsult
 For all other architectures and/or operative systems, you will need to build Dogen from source. Source downloads are available below.
 #+end_src
 
-- [[https://twitter.com/MarcoCraveiro/status/909878261852835843][Tweet]]
-- [[https://www.linkedin.com/feed/update/urn:li:activity:6315644420331053056][LinkedIn]]
+- [[https://twitter.com/MarcoCraveiro/status/927655421531361280][Tweet]]
+- [[https://www.linkedin.com/feed/update/urn:li:activity:6333421782644719616][LinkedIn]]
 - [[https://gitter.im/DomainDrivenConsulting/dogen][Gitter]]
 
 *** STARTED Sprint and product backlog grooming                       :story:
