--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,16 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-07 Tue 09:00]
+#+CAPTION: Clock summary at [2017-11-07 Tue 19:00]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *1:38* |      |      | 100.0 |
+| *Total time*                                                                | *2:38* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 1:38   |      |      | 100.0 |
-| Active                                                                      |        | 1:38 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 1:03 |  64.3 |
-| COMPLETED Remove remnants of upsilon                                        |        |      | 0:35 |  35.7 |
+| Stories                                                                     | 2:38   |      |      | 100.0 |
+| Active                                                                      |        | 2:38 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 1:03 |  39.9 |
+| COMPLETED Remove remnants of upsilon                                        |        |      | 0:35 |  22.2 |
+| STARTED Remove yarn element types in dia frontend                           |        |      | 1:00 |  38.0 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -97,9 +98,22 @@ Updates to sprint and product backlog.
 Originally we had removed upsilon as a frontend but it seems there are
 still some remnants around yarn. Delete them.
 
-*** STARTED Implement exomodel in terms of exoelements                :story:
+*** STARTED Remove yarn element types in dia frontend                 :story:
+    CLOCK: [2017-11-07 Tue 18:09]--[2017-11-07 Tue 19:00] =>  0:51
+    CLOCK: [2017-11-07 Tue 09:02]--[2017-11-07 Tue 09:11] =>  0:09
+
+Instead of mapping to yarn element types, we should be using the
+stereotypes directly.
+
+*** Implement exomodel in terms of exoelements                        :story:
 
 For details on the analysis, see the comments in the previous sprint.
+
+Notes:
+
+- now that there is no longer a mismatch between dia's model and
+  yarn's model we can probably do away with the processed object and
+  processed comment, and simply map dia directly into yarn.
 
 Tasks:
 
