--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -99,11 +99,15 @@ Originally we had removed upsilon as a frontend but it seems there are
 still some remnants around yarn. Delete them.
 
 *** STARTED Remove yarn element types in dia frontend                 :story:
+    CLOCK: [2017-11-09 Thu 07:55]--[2017-11-09 Thu 08:40] =>  0:45
     CLOCK: [2017-11-07 Tue 18:09]--[2017-11-07 Tue 19:00] =>  0:51
     CLOCK: [2017-11-07 Tue 09:02]--[2017-11-07 Tue 09:11] =>  0:09
 
 Instead of mapping to yarn element types, we should be using the
 stereotypes directly.
+
+Actually the right way of doing this is to split out the well-known
+stereotypes from the other stereotypes.
 
 *** Implement exomodel in terms of exoelements                        :story:
 
