--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,17 +13,17 @@
 ** Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-07 Tue 19:00]
+#+CAPTION: Clock summary at [2017-11-09 Thu 20:11]
 | <75>                                                                        |        |      |      |       |
 | Headline                                                                    | Time   |      |      |     % |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| *Total time*                                                                | *2:38* |      |      | 100.0 |
+| *Total time*                                                                | *3:58* |      |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+------+------+-------|
-| Stories                                                                     | 2:38   |      |      | 100.0 |
-| Active                                                                      |        | 2:38 |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |      | 1:03 |  39.9 |
-| COMPLETED Remove remnants of upsilon                                        |        |      | 0:35 |  22.2 |
-| STARTED Remove yarn element types in dia frontend                           |        |      | 1:00 |  38.0 |
+| Stories                                                                     | 3:58   |      |      | 100.0 |
+| Active                                                                      |        | 3:58 |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |      | 1:03 |  26.5 |
+| COMPLETED Remove remnants of upsilon                                        |        |      | 0:35 |  14.7 |
+| STARTED Remove yarn element types in dia frontend                           |        |      | 2:20 |  58.8 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -99,6 +99,8 @@ Originally we had removed upsilon as a frontend but it seems there are
 still some remnants around yarn. Delete them.
 
 *** STARTED Remove yarn element types in dia frontend                 :story:
+    CLOCK: [2017-11-09 Thu 20:04]--[2017-11-09 Thu 20:11] =>  0:07
+    CLOCK: [2017-11-09 Thu 19:35]--[2017-11-09 Thu 20:03] =>  0:28
     CLOCK: [2017-11-09 Thu 07:55]--[2017-11-09 Thu 08:40] =>  0:45
     CLOCK: [2017-11-07 Tue 18:09]--[2017-11-07 Tue 19:00] =>  0:51
     CLOCK: [2017-11-07 Tue 09:02]--[2017-11-07 Tue 09:11] =>  0:09
