--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,16 +13,16 @@
 * Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-17 Fri 10:09]
+#+CAPTION: Clock summary at [2017-11-17 Fri 10:46]
 | <75>                                                                        |        |   |      |       |
 | Headline                                                                    | Time   |   |      |     % |
 |-----------------------------------------------------------------------------+--------+---+------+-------|
-| *Total time*                                                                | *4:55* |   |      | 100.0 |
+| *Total time*                                                                | *5:31* |   |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+---+------+-------|
-| Active                                                                      | 4:55   |   |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |   | 1:03 |  21.4 |
-| COMPLETED Remove remnants of upsilon                                        |        |   | 0:35 |  11.9 |
-| STARTED Remove yarn element types in dia frontend                           |        |   | 3:17 |  66.8 |
+| Active                                                                      | 5:31   |   |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |   | 1:03 |  19.0 |
+| COMPLETED Remove remnants of upsilon                                        |        |   | 0:35 |  10.6 |
+| STARTED Remove yarn element types in dia frontend                           |        |   | 3:53 |  70.4 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -98,7 +98,7 @@ Originally we had removed upsilon as a frontend but it seems there are
 still some remnants around yarn. Delete them.
 
 *** STARTED Remove yarn element types in dia frontend                 :story:
-    CLOCK: [2017-11-17 Fri 10:10]
+    CLOCK: [2017-11-17 Fri 10:10]--[2017-11-17 Fri 10:46] =>  0:36
     CLOCK: [2017-11-17 Fri 09:15]--[2017-11-17 Fri 10:09] =>  0:54
     CLOCK: [2017-11-09 Thu 20:12]--[2017-11-09 Thu 20:15] =>  0:03
     CLOCK: [2017-11-09 Thu 20:04]--[2017-11-09 Thu 20:11] =>  0:07
