--- a/doc/agile/v1/sprint_backlog_07.org
+++ b/doc/agile/v1/sprint_backlog_07.org
@@ -13,16 +13,16 @@
 * Active
 
 #+begin: clocktable :maxlevel 3 :scope subtree :indent nil :emphasize nil :scope file :narrow 75 :formula %
-#+CAPTION: Clock summary at [2017-11-17 Fri 15:11]
+#+CAPTION: Clock summary at [2017-11-17 Fri 15:22]
 | <75>                                                                        |        |   |      |       |
 | Headline                                                                    | Time   |   |      |     % |
 |-----------------------------------------------------------------------------+--------+---+------+-------|
-| *Total time*                                                                | *9:13* |   |      | 100.0 |
+| *Total time*                                                                | *9:23* |   |      | 100.0 |
 |-----------------------------------------------------------------------------+--------+---+------+-------|
-| Active                                                                      | 9:13   |   |      | 100.0 |
-| COMPLETED Edit release notes for previous sprint                            |        |   | 1:03 |  11.4 |
-| COMPLETED Remove remnants of upsilon                                        |        |   | 0:35 |   6.3 |
-| STARTED Create a well-defined set of stereotypes                            |        |   | 7:35 |  82.3 |
+| Active                                                                      | 9:23   |   |      | 100.0 |
+| COMPLETED Edit release notes for previous sprint                            |        |   | 1:03 |  11.2 |
+| COMPLETED Remove remnants of upsilon                                        |        |   | 0:35 |   6.2 |
+| STARTED Create a well-defined set of stereotypes                            |        |   | 7:45 |  82.6 |
 #+TBLFM: $5='(org-clock-time% @3$2 $2..$4);%.1f
 #+end:
 
@@ -98,6 +98,7 @@ Originally we had removed upsilon as a frontend but it seems there are
 still some remnants around yarn. Delete them.
 
 *** STARTED Create a well-defined set of stereotypes                  :story:
+    CLOCK: [2017-11-17 Fri 15:12]--[2017-11-17 Fri 15:22] =>  0:10
     CLOCK: [2017-11-17 Fri 14:51]--[2017-11-17 Fri 15:11] =>  0:20
     CLOCK: [2017-11-17 Fri 14:02]--[2017-11-17 Fri 14:50] =>  0:48
     CLOCK: [2017-11-17 Fri 10:47]--[2017-11-17 Fri 13:21] =>  2:34
