--- a/doc/agile/product_backlog.org
+++ b/doc/agile/product_backlog.org
@@ -10074,6 +10074,7 @@ it in anger with dogen:
 - dia should have an XMI export.
 - dia should allow selecting groups of objects based on some criteria:
   stereotypes matching regex, class names, classes in namespace, etc.
+- attributes should have stereotypes.
 
 It seems like dia is also using GitHub these days:
 
